# oci-utils

./: Cargo.toml  Dockerfile  docker-bake.hcl  flake.nix  ocicp.Dockerfile  readme.md
ocicp/: Cargo.toml
ocicp/src/: modules.rs
ocicp/src/modules/app/: error.rs  functions.rs  mod.rs
ocicp/src/modules/app/functions/: output_for_args.rs
ocicp/src/modules/cli/models/: root_arguments.rs
ocicp/src/modules/docker/: error.rs  mod.rs
ocicp/src/modules/docker/models/: docker_source.rs
ocicp/src/modules/docker_source/: error.rs  mod.rs  models.rs
ocicp/src/modules/docker_source/models/: docker_source.rs
ocicp/src/modules/oci/models/: any_resolver.rs
ocicp/src/modules/output/: mod.rs
ocicp/src/modules/platform/: models.rs
ocicp/src/modules/registry/: dto.rs  error.rs  functions.rs  mod.rs
ocicp/src/modules/registry/dto/: identity_token_payload.rs
ocicp/src/modules/registry/functions/: real_scheme.rs
ocicp/src/modules/registry/models/: registry_credentials.rs  registry_source.rs
ocicp/src/modules/registry_source/: error.rs  mod.rs  models.rs
ocicp/src/modules/registry_source/models/: registry_source.rs
ocicp/src/modules/source/: error.rs  mod.rs  models.rs
ocicp/src/modules/source/models/: any_source.rs  platform_selector.rs  source.rs
ocidrm/: Cargo.toml
shared/: Cargo.toml
shared/src/: modules.rs
shared/src/modules/docker/: error.rs  mod.rs  models.rs
shared/src/modules/docker/models/: docker_image.rs
shared/src/modules/image/: error.rs  mod.rs  models.rs
shared/src/modules/image/models/: image_ref.rs
shared/src/modules/oci/: error.rs  functions.rs  mod.rs  models.rs  traits.rs
shared/src/modules/oci/functions/: find_manifests.rs  manifests_for_index.rs  wrap_reader.rs
shared/src/modules/oci/models/: any_resolver.rs
shared/src/modules/oci/traits/: blob_resolver.rs
shared/src/modules/platform/models/: platform_selector.rs
shared/src/modules/registry/: dto.rs  error.rs  functions.rs  mod.rs  models.rs
shared/src/modules/registry/dto/: identity_token_payload.rs
shared/src/modules/registry/functions/: real_scheme.rs
shared/src/modules/registry/models/: registry_credentials.rs  registry_resolver.rs  registry_source.rs
src/: main.rs  modules.rs
(+64 files in other folders)
