[package]
name = "ocicp"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ocicp"
path = "./src/main.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
flate2 = "1.1.8"
oci-spec = "0.8.4"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
thiserror = "2.0.18"
url = "2.5.8"
wax = { version = "0.6.0", default-features = false }
