[package]
name = "ocicp"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "ocicp"
path = "./src/main.rs"

[dependencies]
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
flate2 = "1.1.8"
oci-spec = "0.8.4"
owo-colors = "4.2.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
url = "2.5.8"
wax = { version = "0.6.0", default-features = false }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
