[package]
name = "ocicp"
version = "0.6.1"
edition = "2024"

[[bin]]
name = "ocicp"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
thiserror = "2.0.18"
clap = { version = "4.5.54", features = ["derive"] }
wax = { version = "0.6.0", default-features = false }
owo-colors = "4.2.3"
serde_json = "1.0.149"
oci-spec = "0.8.4"
sha2 = "0.10.9"
tar = "0.4.44"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
bytes = "1.11.0"
url = "2.5.8"
