[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
wax = { version = "0.6.0", default-features = false }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
url = "2.5.8"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
docker_credential = "1.3.2"
base64 = "0.22.1"
oci-spec = "0.8.4"
tar = "0.4.44"
bytes = "1.11.0"
flate2 = "1.1.8"